--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -5,29 +5,9 @@
         / Always force latest IE rendering engine or request Chrome Frame
         %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
         / Use title if it's in the page YAML frontmatter
-        %title= data.page.title || "CHANGE THIS TITLE"
+        %title= data.page.title || "Gloo Blog"
         = stylesheet_link_tag "bootstrap", "font-awesome" ,"style"
         %script{:src => "http://code.jquery.com/jquery-latest.min.js", :type => "text/javascript"}
         = javascript_include_tag  "bootstrap"
     %body{:class => page_classes}
-        .navbar.navbar-fixed-top
-            .container
-                %button.navbar-toggle{"data-target" => ".navbar-responsive-collapse", "data-toggle" => "collapse", :type => "button"}
-                    %span.icon-bar
-                    %span.icon-bar
-                    %span.icon-bar
-                %a.navbar-brand{:href => "#"} Brand
-                .nav-collapse.collapse.navbar-responsive-collapse
-                    %ul.nav.navbar-nav
-                        %li.active
-                            %a{:href=>"#"}
-                                Home
-                        %li
-                            %a{:href=>"#"}
-                                About
-                        %li
-                            %a{:href=>"#"}
-                                Contact
-        .container
-            .row
-                = yield
+        = yield
